<resources>
    <string name="app_name">zdone</string>
  <string name="app_slogan">The only way to get things done</string>
  <string name="submit">submit</string>
  <string name="enter_your_api_key">Enter your api key</string>
  <string name="error_try_again">Try Again</string>
  <string name="settings">Settings</string>
  <string name="notif_channel_name">zdone_notification_channel</string>
  <string name="notif_channel_description">Channel for that shows notifications regarding in-progress tasks</string>
  <string name="task_item_name">%s (%d)</string>
    <string name="tasks">Tasks</string>
    <string name="timer">Timer</string>
    <string name="new_task_name">New task name</string>
  <string name="duration_mins">Duration (mins)</string>
    <string name="sample_duration_mins">e.g. 10.5</string>
  <string name="end_time_hh_mm">End time (HH:mm)</string>
  <string name="end_time_sample">e.g. 23:59</string>
  <string name="cancel">Cancel</string>
  <string name="delete">Delete</string>
  <string name="save">Save</string>
  <string name="task_name">Task Name</string>
  <string name="error_title">An error occurred. Please try again.</string>
  <string name="login_logo_content_description">App Logo, a multi-colored zee</string>
  <string name="login_continue_with_test_account">Continue With Test Account</string>
  <string name="task_item_button_to_defer_task_content_description">button to defer task</string>
  <string name="task_item_button_to_start_this_task_content_description">button to start this task</string>
  <string name="error_logo_content_description">error logo</string>
  <string name="daily_stats">Daily Stats</string>
  <string name="api_key_settings_hint">long random text goes here</string>
  <string name="api_key">API Key</string>
  <string name="work_mins_setting_hint">0-1440</string>
  <string name="settings_max_work_time_per_day_mins">Max Work Time per Day (mins)</string>
  <string name="settings_large_fingers_mode">Large Fingers Mode</string>
  <string name="settings_section_tasks_by_time_of_day">Section Tasks By Time of Day</string>
  <string name="settings_section_tasks_by_tod_description">Only show morning tasks during morning routine, only show current day tasks during day, only show evening tasks in evening</string>
  <string name="settings_log_out">Log Out</string>
  <string name="upcoming_tasks_empty_title">Select some tasks or roll with the standard set</string>
  <string name="upcoming_tasks">Upcoming Tasks</string>
  <string name="settings_stop_working">Stop working</string>

  <string-array name="time_granularity_options">
    <item>Weekly</item>
    <item>Daily</item>
  </string-array>

</resources>
