<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/normalPadding"
    >

    <TextView
        android:id="@+id/edit_event_error_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/task_name"
            />

        <EditText
            android:id="@+id/task_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.TextView"
            android:hint="@string/new_task_name"
            android:importantForAutofill="no"
            android:inputType="textAutoComplete"
            android:nextFocusDown="@id/task_duration_mins"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/duration_mins"
            />

        <EditText
            android:id="@+id/task_duration_mins"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/sample_duration_mins"
            style="@style/Widget.AppCompat.TextView"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:nextFocusUp="@id/task_name"
            android:nextFocusDown="@id/task_end_time"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/end_time_hh_mm"
            />

        <EditText
            android:id="@+id/task_end_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.TextView"
            android:hint="@string/end_time_sample"
            android:importantForAutofill="no"
            android:inputType="time" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/cancel_edit_task_event"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@android:color/holo_red_dark"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/delete_task_event"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/save_task_event"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/colorAccent"
            android:textAllCaps="false" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            />

    </LinearLayout>


</LinearLayout>