<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/largePadding"
    >

  <ImageView
      android:layout_width="60dp"
      android:layout_height="60dp"
      android:src="@mipmap/zdone_logo_round"
      android:layout_marginBottom="@dimen/normalPadding"
      app:layout_constraintBottom_toTopOf="@+id/appName"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      />

  <TextView
      android:id="@+id/appName"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/app_name"
      android:textSize="@dimen/largeText"
      android:textStyle="bold"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintVertical_bias=".15"
      />

  <TextView
      android:id="@+id/appSlogan"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/app_slogan"
      android:textSize="@dimen/normalText"
      android:layout_marginTop="@dimen/normalPadding"
      app:layout_constraintTop_toBottomOf="@+id/appName"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      />

  <EditText
      android:id="@+id/apiKeyEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/enter_your_api_key"
      android:layout_marginTop="@dimen/largePadding"
      app:layout_constraintTop_toBottomOf="@id/appSlogan"
      />

  <Button
      android:id="@+id/submitApiKeyButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/submit"
      android:layout_marginTop="@dimen/normalPadding"
      app:layout_constraintTop_toBottomOf="@id/apiKeyEditText"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      />

  <Button
      android:id="@+id/useTestAccountButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      android:text="Continue With Test Account"
      />

</androidx.constraintlayout.widget.ConstraintLayout>